--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,4 +1,10 @@
 ---
 ---
+//@import "tailwindcss/base";
+//@import "tailwindcss/components";
+//@import "tailwindcss/utilities";
+///* ./your-css-folder/styles.css */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-@import "main";
