Step 4 Add TWtypography and rename main.css
Or it will error. Sass Converter, see Notion

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,9 @@
     <title>{{ page.title }} - {{ site.title }}</title>
     <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}">
   </head>
-  <body class="bg-blue-200 font-mono">
-    {{ content }}
+  <body class="bg-blue-200">
+    <div class="font-mono prose prose-green">
+      {{ content }}
+    </div>
   </body>
 </html>
