--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,9 +6,14 @@
     <title>{{ page.title }} - {{ site.title }}</title>
     <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}">
   </head>
-  <body class="bg-blue-200">
-    <div class="font-mono prose prose-green">
-      {{ content }}
+  <body class="">
+  <div class="container mx-auto">
+    <div class="font-mono prose prose-green ">
+      <br>
+      <div class=" bg-blue-200">
+        {{ content }}
+      </div>
     </div>
+  </div>
   </body>
 </html>
